# BoomBot

./: .env  .gitignore  Cargo.toml  handle_migrations.py
.github/workflows/: deploy.yml  rust.yml
migrations/: 20210920190300_initial.sql
src/: discord_handler.rs  handler.rs  main.rs
src/handlers/: command_handlers.rs  discord_handler.rs  mod.rs  utils.rs
src/handlers/command_handlers/: mod.rs  test_command_handler.rs
src/handlers/discord_handler/: handler.rs  mod.rs
