[package]
name = "boom_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["full"] }
simple_logger = "2.1.0"
log = "0.4.16"
anyhow = "1.0"